- Símbolo añadido como nueva capa en input al aportar.
- Símbolo añadido en worcracy aparte.

- Solución a nuevos casos en que existía padding-right.

- Paso a nuevas clases de estilos testeados.

--- a/app/view/css/project/widget/invest.css
+++ b/app/view/css/project/widget/invest.css
@@ -84,6 +84,16 @@ div.widget.project-invest #amount {
     font-weight: bold;
     margin-right: 20px;
 }
+
+div.widget.project-invest .symbol {
+    position:absolute; 
+    bottom:6px; 
+    left: 20px; 
+    font-size: 24px; 
+    color: #96238F; 
+    font-weight: bold;
+}
+
 div.widget.project-invest #fullname,
 div.widget.project-invest #address,
 div.widget.project-invest #location {
@@ -150,7 +160,6 @@ div.widget.project-invest div.reminder #amount-reminder {
     font-size: 20px;
     font-weight: bold;
     margin-left: 5px;
-    padding-right: 20px;
 }
 
 div.widget.project-invest div.individual ul li {
