--- a/app/view/css/header.css
+++ b/app/view/css/header.css
@@ -487,7 +487,7 @@ div#header div#about ul li#lang.active{
 
 div#header div#about ul li#lang a{
 	background: url('lang-triangulo.png') no-repeat scroll 100% bottom transparent;
-	padding-right: 25px;
+	padding-right: 10px;
 	cursor:default;
 }
 
@@ -500,9 +500,18 @@ div#header div#about ul li > *:hover {
 
 /* Para currency */
 
+div#header div#about ul li#currency{
+    padding-left: 0px;
+    margin-left: 1em;
+    width:70px;
+    padding-right: 0px;
+    text-align: center;
+}
+
 div#header div#about ul li#currency a{
     background: url('lang-triangulo.png') no-repeat scroll 100% bottom transparent;
     padding-right: 10px;
+    padding-left: 10px;
     cursor:default;
 }
 
@@ -815,7 +824,7 @@ div#header div#menu > ul > li.community > div > ul > li > a:hover,
 div#header div#menu > ul > li.dashboard > div > ul > li > a:hover {
     background-color: #78d1d1;
 }
-/* fin del menu y despelgable dashboard */
+/* fin del menu y desplegable dashboard */
 
 /* desplegable de idiomas */
 ul.lang{
