--- a/app/view/css/project/widget/invest.css
+++ b/app/view/css/project/widget/invest.css
@@ -153,6 +153,7 @@ div.widget.project-invest.method button.pay-paypal:hover {
 div.widget.project-invest div.reminder {
     width: 40%;
     float: left;
+    margin-bottom: 1em;
 }
 
 div.widget.project-invest div.reminder #amount-reminder {
