Importe recompensas, en la misma divida del proyecto

--- a/app/view/css/project/edit/rewards.css
+++ b/app/view/css/project/edit/rewards.css
@@ -358,10 +358,12 @@ body.project-edit div#main.rewards div.superform li.element.editindividual_rewar
     max-width: 3em;
     min-width: 3em;
     float: left;
+    /*
     padding-right: 2em;
-    background-image: url('/view/css/euro/s.png');    
+    background-image: url('/view/css/euro/s.png');
     background-repeat: no-repeat;
     background-position: 3.7em center;
+    */
     font-weight: bold;
 }
 
